Install Bootstrap edit inicio

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -1,2 +1,5 @@
-<h1>Bienvenida#inicio</h1>
-<p>Find me in app/views/bienvenida/inicio.html.erb</p>
+<div class="jumbotron">
+<h1>Bienvenida a La Lista</h1>
+<p>Esta es una herramienta sencilla para alojar lista de regalos</p>
+</div>
+<h3>Busca los productos que vas a comprar y reserva los que vas a regalar</h3>
