Implement Devise with mailer and views

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -3,3 +3,18 @@
 <p>Esta es una herramienta sencilla para alojar lista de regalos</p>
 </div>
 <h3>Busca los productos que vas a comprar y reserva los que vas a regalar</h3>
+
+<div class="row">
+  <div class="col-md-4">
+    <h2>Registrate con nosotros</h2>
+    <p>La Lista te permite registrarte fácilmente con tu cuenta de correo o con tu cuenta en facebook.</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Busca los productos</h2>
+    <p>Selecciona los productos que deseas regalar y infórmale al dueño de la lista tu intención de compra</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Compra los productos</h2>
+    <p>La Lista te brinda la información para que tu puedes comprar los regalos de tu preferencia y cuando ya lo tengas puedes notificar al dueño de la lista de tu compra.</p>
+  </div>
+</div>
