Ahora la aplicación habla en español

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -1,6 +1,9 @@
 <div class="jumbotron">
-<h1>Bienvenida a La Lista</h1>
-<p>Esta es una herramienta sencilla para alojar lista de regalos</p>
+<h1>La Lista</h1>
+<p>Una herramienta para alojar listas de regalos</p>
+
+<%= link_to "Regístrate", registrarse_path, class: "btn btn-lg btn-info"%>
+
 </div>
 <h3>Busca los productos que vas a comprar y reserva los que vas a regalar</h3>
 
