--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,27 @@
-<h2>Sign up</h2>
+<h2>Regístrate</h2>
 
 <div class="row">
   <div class="col-md-8">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Enter name" %>
+        <%= f.label :name, "Nombre" %>
+        <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Escribe tu nombre" %>
       </div>
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
+        <%= f.email_field :email, class: 'form-control', placeholder: "El email donde te llegará la confirmación" %>
       </div>
       <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password", autocomplete: "off" %>
+        <%= f.label :password, "Contraseña" %>
+        <%= f.password_field :password, class: 'form-control', placeholder: "Ingresa la contraseña", autocomplete: "off" %>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation", autocomplete: "off" %>
+        <%= f.label :password_confirmation, "Repetir contraseña" %>
+        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Ingresa la contraseña nuevamente", autocomplete: "off" %>
       </div>
       <div class="form-group">
-        <%= f.submit "Sign up", class: 'btn btn-success' %>
+        <%= f.submit "Registrarse", class: 'btn btn-success' %>
       </div>
       <div class="form-group">
         <%= render "devise/shared/links" %>
