--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,12 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
-      <li><%= link_to "La Lista", bienvenida_inicio_path %></li>
+      <li><%= link_to "Inicio", root_path %></li>
       <div class="pull-right user-info">
        <% if current_user %>
-         Hello <%= current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+         Hola <%= current_user.email %>! <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %>
        <% else %>
-         <%= link_to "Sign In", new_user_session_path %> or 
-         <%= link_to "Sign Up", new_user_registration_path %>
+         <%= link_to "Ya eres miembro?", ingresar_path %> 
        <% end %>
       </div>
     </ul>
