--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Regalos#index</h1>
-<p>Find me in app/views/regalos/index.html.erb</p>
+<h3>Todos los posibles regalos</h3>
+<% if policy(Regalo.new).create? %>
+<%= link_to "Añadir Regalo", new_lista_regalo_path(@lista), class: "btn btn-primary" %>
+<% end %>
+<hr>
+<%= render @regalos %>
