--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -1,19 +1,58 @@
- <div class="regalo-<%= regalo.id %>">
-  <span>
-    <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
-  </span> 
-  <span>
-    <%= regalo.titulo.to_s.humanize.titleize%>
-  </span> 
-
-  <span>
-    <%= link_to "comprar", lista_regalo_comprar_path(regalo.lista, regalo) %>
-  </span>
-  <span>
-    <%= link_to "reservar", lista_regalo_reservar_path(regalo.lista, regalo) %>
-  </span>
-  <span>
-    <%= link_to "liberar", lista_regalo_liberar_path(regalo.lista, regalo) %>
-  </span>
-
-</div>
+ <% unless regalo.compromiso.nil? %>
+  <div class="regalo-<%= regalo.id %>">
+    <div>
+    <span>
+      <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
+    </span> 
+    <span>
+      <%= regalo.titulo.to_s.humanize.titleize%>
+    </span> 
+    </div>
+    <div class="controles">
+    <% case regalo.compromiso.value %>
+    <% when "disponible" %>
+    <span>
+      <%= link_to "comprar", lista_regalo_comprar_path(regalo.lista, regalo), class: "btn btn-default btn-md" %>
+    </span>
+    <span>
+      <%= link_to "reservar", lista_regalo_reservar_path(regalo.lista, regalo), class: "btn btn-default btn-md" %>
+    </span>
+    <% if policy(regalo.lista).destroy? %>
+    <span>
+      <%= link_to "eliminar de la lista", lista_regalo_compromiso_path(regalo.lista, regalo, regalo.compromiso), method: :delete, class: "btn btn-default btn-md" %>
+    </span>
+    <% end %>
+    <% when "reservado" %>
+    <span>
+      <%= link_to "liberar", lista_regalo_liberar_path(regalo.lista, regalo), class: "btn btn-default btn-md" %>
+    </span>
+    <span>
+      <%= link_to "comprar", lista_regalo_comprar_path(regalo.lista, regalo), class: "btn btn-default btn-md" %>
+    </span>
+    <% when "comprado" %>
+      <span>
+      <%= link_to "liberar", lista_regalo_liberar_path(regalo.lista, regalo), class: "btn btn-default btn-md" %>
+      </span>
+    <% end %>
+    </div><!-- /controles-->
+  </div><!-- /regalo-->
+  <!-- /controles-->
+  <% else %>
+  <% if policy(regalo.lista).edit? %>
+  <div class="regalo-<%= regalo.id %>">
+    <div>
+    <span>
+      <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
+    </span> 
+    <span>
+      <%= regalo.titulo.to_s.humanize.titleize%>
+    </span> 
+    </div>
+    <div class="controles">
+      <span>
+      <%= link_to "publicar en la lista", lista_regalo_liberar_path(regalo.lista, regalo), class: "btn btn-default btn-md" %>
+      </span>
+    </div>
+  </div>
+  <% end %>
+<% end %>
