--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -1,5 +1,5 @@
-<h3>Todos los posibles regalos</h3>
-<% if policy(Regalo.new).create? %>
+<h3>Regalos de la lista <strong><%= link_to @lista.nombre.to_s.humanize.titleize, lista_path(@lista) %></strong></h3>
+<% if policy(@lista).create? %>
 <%= link_to "Añadir Regalo", new_lista_regalo_path(@lista), class: "btn btn-primary" %>
 <% end %>
 <hr>
