--- a/app/views/regalos/show.html.erb
+++ b/app/views/regalos/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @regalo.titulo %></h1>
 <p><%= image_tag(@regalo.imagen.url) if @regalo.imagen? %></p>
 <p><%= link_to 'más info', @regalo.url if @regalo.url? %> </p>
+<%= link_to "Volver a los regalos de la lista", lista_regalos_path(@regalo.lista) %>
