--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,15 +3,20 @@
 <div class="row">
   <div class="col-md-8">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <% if @token != nil %>
+        <%= hidden_field_tag :convidado_token, @token %>
+      <% end %>
       <%= devise_error_messages! %>
       <div class="form-group">
         <%= f.label :name, "Nombre" %>
         <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Escribe tu nombre" %>
       </div>
+     
       <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: 'form-control', placeholder: "El email donde te llegará la confirmación" %>
       </div>
+    
       <div class="form-group">
         <%= f.label :password, "Contraseña" %>
         <%= f.password_field :password, class: 'form-control', placeholder: "Ingresa la contraseña", autocomplete: "off" %>
