--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -1,8 +1,8 @@
 <h3><%= @lista.nombre %></h3>
 <% if @lista.regalos.empty? %>
-<%= link_to "Añadir tu primer regalo", new_lista_regalo_path(@lista), class: "btn btn-primary" %>
+<%= link_to "Añadir tu primer regalo", new_fiesta_lista_regalo_path(@fiesta,@lista), class: "btn btn-primary" %>
 <% else %>
-<%= link_to "Ver todos los regalos", lista_regalos_path(@lista), class: "btn btn-primary" %>
+<%= link_to "Añadir regalo", new_fiesta_lista_regalo_path(@fiesta, @lista), class: "btn btn-primary" %>
 <% end %>
 <div class="col-md-12">
   <section class="col-md-4"> 
@@ -11,7 +11,7 @@
       <ol>
         <% @disponibles.each do |regalo| %>
         <li class="todos-item">
-          <%= render partial: "regalos/regalo", locals: {regalo: regalo} %>
+          <%= render partial: "regalos/regalo", locals: {fiesta: @fiesta, lista: @lista,regalo: regalo} %>
         </li>
         <% end %>
       </ol>
@@ -23,7 +23,7 @@
       <% @reservados.each do |regalo| %>
       <ol>
         <li class="reservados-item">
-          <%= render partial: "regalos/regalo", locals: {regalo: regalo} %>
+          <%= render partial: "regalos/regalo", locals: {fiesta: @fiesta, lista: @lista, regalo: regalo} %>
         </li>
         <% end %>
       </ol>
@@ -35,12 +35,13 @@
       <ol>
         <% @comprados.each do |regalo| %>
         <li class="comprados-item">
-          <%= render partial: "regalos/regalo", locals: {regalo: regalo} %>
+          <%= render partial: "regalos/regalo", locals: {fiesta: @fiesta, lista: @lista, regalo: regalo} %>
         </li>
         <% end %>
       </ol>
     </div>
   </section>
 </div>
-
-<%= link_to "Atrás", :back, class: "btn btn-default" %>
+<div>
+<%= link_to "volver a la fiesta", @fiesta, class: "btn btn-primary" %>
+</div>
