--- a/app/views/convidados/index.html.erb
+++ b/app/views/convidados/index.html.erb
@@ -1,2 +1,40 @@
-<h1>Convidados#index</h1>
-<p>Find me in app/views/convidados/index.html.erb</p>
+<h1>RSVPs</h1>
+<p>RSVP es la abreviatura de répondez s'il vous plaît, una expresión francesa, que traducida al español significa "responda, por favor". Se la utiliza generalmente para invitaciones a grandes eventos, para poder confirmar la presencia de los invitados y obtener un mejor planeamiento. - <i>Wikipedia</i></p>
+
+<div class="col-md-8 col-md-offset-2">
+  <h2>Usuarios invitados</h2>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Correo</th>
+            <th>Eliminar</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @convidados.each do |convidado| %>
+          <tr>
+            <% unless convidado.invitado_id.nil? %>
+            <td><%= User.find(convidado.invitado_id).name %></td>
+            <% else %>
+            <td>No registrado aún</td>
+            <% end %>
+            <td><%= convidado.email %></td>
+            <td><%= link_to "Eliminar", [@fiesta, convidado], method: :delete %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <h3 class="extra-margin-top">Invitar usuarios</h3>
+      <%= form_for [@fiesta, @convidado] do |f| %>
+      <%= f.label :email, placeholder: "email" %>
+      <%= f.email_field :email %>
+      <%= f.submit 'Invitar amigos' , class: "btn-primary"%>
+      <% end %>
+
+    </div>
+  </div>
+</div>
+
