--- a/app/views/regalos/new.html.erb
+++ b/app/views/regalos/new.html.erb
@@ -1,6 +1,6 @@
 <h3>Nuevo Regalo</h3>
 <p>Un regalo a la vez</p>
-<%= form_for @regalo, url: lista_regalos_path(@lista), html: {class: "lista-form"} do |f| %>
+<%= form_for @regalo, url: fiesta_lista_regalos_path(@fiesta, @lista), html: {class: "lista-form"} do |f| %>
     <% if @regalo.errors.any? %>
     <div class="alert alert-danger">
         <% @regalo.errors.full_messages.each do |msg| %>
