--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -1,8 +1,10 @@
 <h3><%= @lista.nombre %></h3>
+<% if policy(@lista).update? %>
 <% if @lista.regalos.empty? %>
 <%= link_to "Añadir tu primer regalo", new_fiesta_lista_regalo_path(@fiesta,@lista), class: "btn btn-primary" %>
 <% else %>
 <%= link_to "Añadir regalo", new_fiesta_lista_regalo_path(@fiesta, @lista), class: "btn btn-primary" %>
+<% end %>
 <% end %>
 <div class="col-md-12">
   <section class="col-md-4"> 
@@ -43,5 +45,19 @@
   </section>
 </div>
 <div>
-<%= link_to "volver a la fiesta", @fiesta, class: "btn btn-primary" %>
+<%= link_to "<< volver a la fiesta", @fiesta, class: "btn btn-xs btn-primary" %>
 </div>
+
+<script>
+var ready;
+ready = function() {
+  $('.btn-modal').click(function(e){
+    e.preventDefault();
+    var selector = "#" + $(this).attr('data-selector');
+    console.log(selector);
+    $(selector).modal('show');
+  });
+};
+$(document).ready(ready);
+$(document).on('page:load', ready);
+</script>
