--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -1,58 +1,80 @@
  <% unless regalo.compromiso.nil? %>
   <div class="regalo-<%= regalo.id %>">
-    <div>
+    <a href="" class="btn btn-default btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>"><div class="col-sm-12">
     <span>
       <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
     </span> 
     <span>
       <%= regalo.titulo.to_s.humanize.titleize%>
     </span> 
-    </div>
+    <span></span>
+    </div></a>
     <div class="controles">
     <% case regalo.compromiso.value %>
     <% when "disponible" %>
     <span>
-      <%= link_to "comprar", fiesta_lista_regalo_comprar_path(fiesta, lista, regalo), class: "btn btn-default btn-md" %>
+      <%= link_to "comprar", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-md" %>
     </span>
     <span>
-      <%= link_to "reservar", fiesta_lista_regalo_reservar_path(fiesta, lista, regalo), class: "btn btn-default btn-md" %>
+      <%= link_to "reservar", fiesta_lista_regalo_reservar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-md" %>
     </span>
     <% if policy(regalo).destroy? %>
     <span>
-      <%= link_to "eliminar de la lista", fiesta_lista_regalo_compromiso_path(fiesta, lista, regalo, regalo.compromiso), method: :delete, class: "btn btn-default btn-md" %>
+      <%= link_to "eliminar de la lista", fiesta_lista_regalo_compromiso_path(regalo.lista.fiesta, regalo.lista, regalo, regalo.compromiso), method: :delete, class: "btn btn-default btn-md" %>
     </span>
     <% end %>
     <% when "reservado" %>
     <span>
-      <%= link_to "liberar", fiesta_lista_regalo_liberar_path(fiesta, lista, regalo), class: "btn btn-default btn-md" %>
+      <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-md" %>
     </span>
     <span>
-      <%= link_to "comprar", fiesta_lista_regalo_comprar_path(fiesta, lista, regalo), class: "btn btn-default btn-md" %>
+      <%= link_to "comprar", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-md" %>
     </span>
     <% when "comprado" %>
       <span>
-      <%= link_to "liberar", fiesta_lista_regalo_liberar_path(fiesta, lista, regalo), class: "btn btn-default btn-md" %>
+      <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-md" %>
       </span>
     <% end %>
     </div><!-- /controles-->
   </div><!-- /regalo-->
   <!-- /controles-->
   <% else %>
-  <% if policy(lista).edit? %>
+  <% if policy(regalo).edit? %>
   <div class="regalo-<%= regalo.id %>">
-    <div>
+    <a href="" class="btn btn-default btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>"><div class="col-sm-12">
     <span>
       <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
     </span> 
     <span>
       <%= regalo.titulo.to_s.humanize.titleize%>
     </span> 
-    </div>
+    </div></a>
     <div class="controles">
       <span>
-      <%= link_to "publicar en la lista", fiesta_lista_regalo_liberar_path(fiesta, lista, regalo), class: "btn btn-default btn-md" %>
+      <%= link_to "publicar en la lista", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-md" %>
       </span>
     </div>
   </div>
   <% end %>
 <% end %>
+
+<!-- modal begins -->
+<%= content_tag :div, class: 'modal fade', id: "modal-regalo-#{regalo.id}" do %>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Regalo: <%= "#{regalo.titulo}" %></h4>
+        </div>
+        <div class="modal-body">
+         <p><%= image_tag(regalo.imagen.url) if regalo.imagen? %></p>
+        <p><%= link_to 'más info', regalo.url if regalo.url? %> </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+ <% end %><!-- /.modal -->
+
+<!-- modal ends -->
