--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -4,4 +4,19 @@
 <%= link_to "Añadir Regalo", new_fiesta_lista_regalo_path(@fiesta, @lista), class: "btn btn-primary" %>
 <% end %>
 <hr>
-<%# render @regalos %>
+<%= render @regalos %>
+
+<script>
+var ready;
+ready = function() {
+  $('.btn-modal').click(function(e){
+    e.preventDefault();
+    var selector = "#" + $(this).attr('data-selector');
+    console.log(selector);
+    $(selector).modal('show');
+  });
+};
+$(document).ready(ready);
+$(document).on('page:load', ready);
+</script>
+
