Cambiar las páginas de errores, añadir la version de ruby y modificar la página de inicio

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -1,23 +1,23 @@
 <div class="jumbotron">
 <h1>La Lista</h1>
-<p>Una herramienta para alojar listas de regalos</p>
+<p>Una herramienta para gestionar listas de regalos para fiestas de toda clase</p>
 
-<%= link_to "Regístrate", registrarse_path, class: "btn btn-lg btn-info"%>
+<%= link_to "Regístrate hoy!", registrarse_path, class: "btn btn-lg btn-info"%>
 
 </div>
 <h3>Busca los productos que vas a comprar y reserva los que vas a regalar</h3>
 
 <div class="row">
   <div class="col-md-4">
-    <h2>Registrate con nosotros</h2>
-    <p>La Lista te permite registrarte fácilmente con tu cuenta de correo o con tu cuenta en facebook.</p>
+    <h2>Regístrate con nosotros</h2>
+    <p>La Lista te permite registrarte fácilmente con tu cuenta de correo o con tu cuenta en facebook. Como usuario podrás crear tus propias fiestas con listas de regalos e invitar a todos tus familiares o amigos, o recibir invitaciones a fiestas de tus amigos.</p>
   </div>
   <div class="col-md-4">
-    <h2>Busca los productos</h2>
-    <p>Selecciona los productos que deseas regalar y infórmale al dueño de la lista tu intención de compra</p>
+    <h2>Crea los productos</h2>
+    <p>Como anfitrión de la fiesta puedes añadir la cantidad de regalos que tu quieras. Puedes subir imágenes de las cosas que te gustan y hacer más atractivos los regalos. Si lo que deseas es regalar, entonces podrás infórmale al anfitrión de la fiesta que deseas reservar un regalo y tu intención de compra permitirá que tu producto no pueda ser comprado por alguien más. </p>
   </div>
   <div class="col-md-4">
     <h2>Compra los productos</h2>
-    <p>La Lista te brinda la información para que tu puedes comprar los regalos de tu preferencia y cuando ya lo tengas puedes notificar al dueño de la lista de tu compra.</p>
+    <p>La Lista te brinda la información ampliada de la fiesta, de los invitados y de los regalos que espera el anfitrión. Lo mejor de todo es que tu puedes comprar los regalos de tu preferencia en el lugar que prefieras. Tu decides cuánto presupuesto asignar y cuando ya lo tengas en tu poder debes notificar que has comprado el producto para que el anfitrión sepa qué regalos quedan disponibles.</p>
   </div>
 </div>
