Cambiar policy de la fiesta para ocultar botones en el index y nombre al header

--- a/app/views/convidados/index.html.erb
+++ b/app/views/convidados/index.html.erb
@@ -2,8 +2,10 @@
 <p>RSVP es la abreviatura de répondez s'il vous plaît, una expresión francesa, que traducida al español significa "responda, por favor". Se la utiliza generalmente para invitaciones a grandes eventos, para poder confirmar la presencia de los invitados y obtener un mejor planeamiento. - <i>Wikipedia</i></p>
 
 <div class="col-md-8 col-md-offset-2">
-  <h2>Usuarios invitados</h2>
   <div class="panel panel-default">
+    <div class="panel-heading">
+      Usuarios invitados
+    </div>
     <div class="panel-body">
       <table class="table table-striped">
         <thead>
