--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,13 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edita tu cuenta</h2>
 
 <div class="row">
   <div class="col-md-8">
-    <h3>Change email or password</h3>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :patch }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
+      <div class="form-group">
+        <%= f.label :name, "Nombre" %>
+        <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
+      </div>
       <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
@@ -15,38 +18,25 @@
           <%= resource.unconfirmed_email %>
         </div>
       <% end %>
+      <% unless current_user.provider? %>
+      <span class="help-block">Deja estos campos en blanco si no quieres cambiar tu password.</span>
       <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
-        <i>(leave blank if you don't want to change it)</i>
+        <%= f.label :password, "Contraseña" %>
+        <%= f.password_field :password,autocomplete: "off", class: 'form-control', placeholder: "Ingresa la contraseña" %>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
+        <%= f.label :password_confirmation, "Confirmar contraseña" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: "Confirma la contraseña" %>
       </div>
-      <div class="form-group">
-        <%= f.password_field :current_password, class: 'form-control', placeholder: "Enter password" %>
-        <i>(we need your current password to confirm your changes)</i>
-      </div>
+      <% end %>
       <div class="form-group">
         <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
     <% end %>
 
-    <h3>Edit personal information</h3>
-    <%= form_for(current_user) do |f| %>
-      <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Update", class: 'btn btn-success' %>
-      </div>
-    <% end %>
-
-    <h3>Cancel my account</h3>
+    <h3>Cancelar mi cuenta</h3>
     <div class="form-group">
-        <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+        <p><%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Estas segura?" }, method: :delete, class: 'btn btn-danger btn-sm' %></p>
     </div>
   </div>
 </div>
