--- a/app/views/fiestas/_form.html.erb
+++ b/app/views/fiestas/_form.html.erb
@@ -24,7 +24,7 @@
         <%= form_group_tag(fiesta.errors[:descripcion]) do %>
         <div class="form-group">
             <%= f.label :descripcion, "Descripción" %>
-            <%= f.text_area :descripcion, class: "form-control", placeholder: "Unas cuantas palabras para entusiasmar a tus invitados" %>
+            <%= f.text_area :descripcion, class: "form-control", placeholder: "Este es el mensaje que tus invitados veran al ingresar, pónle tu toque personal. Unas cuantas palabras autenticas bastarán." %>
         </div>
         <% end %>
       </div>
