--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,3 +9,9 @@
   margin-top: 5px;
 }
 
+.lista-fiestas {
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px dotted #eee;
+  border-bottom: 1px solid #ccc;
+}
