--- a/app/views/fiestas/index.html.erb
+++ b/app/views/fiestas/index.html.erb
@@ -1,36 +1,39 @@
-<h1>Fiestas</h1>
+<h3>Fiestas</h3>
 <div class="row">
-
-  <div class="col-sm-6">
-    <h3>Mis invitaciones</h3>
+  <!-- Fiestas que tu organizas-->
+   <div class="col-sm-5">
+    <div class="well">
+    <h3>Mis fiestas <% if policy(@fiesta).create? %>
+    <% end %></h3>
+    <span class="help-block">
+      Las reuniones que tu organizas. Gestiona listas. Invita amigos.
+    </span>
+    </div>
+    <% unless @fiestas.empty? %>
+      <% @fiestas.each do |fiesta| %>
+      <div id="fiesta-<%= fiesta.id %>" class="lista-fiestas"><%= link_to fiesta.nombre, fiesta %></div>
+      <% end %>
+    <% else %>
+      Anímate a crear tu primera fiesta. Es gratis! <%= link_to " añadir fiesta", new_fiesta_path(@fiesta), class: "btn btn-xs btn-primary fa fa-plus"  %>
+    <% end %>
+  </div>
+  <!-- Fiestas a las que te invitan -->
+  <div class="col-sm-5 col-sm-offset-1">
+    <div class="well">
+    <h3>Próximas fiestas</h3>
     <span class="help-block">
       Fiestas en las que esperan tu presencia.
     </span>
+    </div>
     <% unless @invitaciones_ids.empty? %>
       <% @invitaciones_ids.each do |id| %>
-      <div id="invitacion-<%= id %>"><span><%= link_to Fiesta.find(id).nombre, fiesta_path(Fiesta.find(id)) %></span>
+      <div id="invitacion-<%= id %>" class="lista-fiestas"><span><%= link_to Fiesta.find(id).nombre, fiesta_path(Fiesta.find(id)) %></span>
         <span><small>Invitado por: <%= Fiesta.find(id).users.first.email %></small></span>
       </div>
       <% end %>
     <% else %>
       Algún día te sorprenderá. No pierdas la fe. Ya llegará!
     <% end %>
+  </div>
 
-  </div>
-  <!-- Fiestas que tu organizas-->
-   <div class="col-sm-6">
-    <h3>Mis fiestas <% if policy(@fiesta).create? %>
-    <small><%= link_to "nueva fiesta", new_fiesta_path(@fiesta)  %></small>
-    <% end %></h3>
-    <span class="help-block">
-      Las reuniones que tu organizas.
-    </span>
-    <% unless @fiestas.empty? %>
-      <% @fiestas.each do |fiesta| %>
-      <div id="fiesta-<%= fiesta.id %>"><%= link_to fiesta.nombre, fiesta %></div>
-      <% end %>
-    <% else %>
-      Anímate a crear tu primera fiesta. Es gratis! 
-    <% end %>
-  </div>
 </div>
